10969 : MS2 paging position should reset when switching runs